fixed footer overlapping with content

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -95,6 +95,7 @@ h2 {
 
 .content{
   margin-top: 35px;  
+  margin-bottom: 100px;
 }
 
 .logo-container {
@@ -164,7 +165,7 @@ h2 {
 .nav-container {
     width: 60%;
     min-width: 650px;
-    margin: 20px auto 100px;
+    margin: 20px auto 0px;
 
     .nav-item {
         float: left;
